Bug 907914: Turn on refcounting threadsafety assertions in opt trunk builds. r=bent