xpcom/glue/nsDebug.h
@@ -349,7 +349,9 @@
   #define NS_CheckThreadSafe(owningThread, msg)
 #else
   #define NS_CheckThreadSafe(owningThread, msg)                 \
-    MOZ_ASSERT(owningThread == PR_GetCurrentThread(), msg)
+    if (MOZ_UNLIKELY(owningThread != PR_GetCurrentThread())) {  \
+      MOZ_CRASH(msg);                                           \
+    }
 #endif
 
 /* When compiling the XPCOM Glue on Windows, we pretend that it's going to
